--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:fontFamily="sans-serif"
-        android:text="Current Number"
+        android:text="@string/current_number"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.219"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
-        android:text="0"
+        android:text="@string/_0"
         android:textSize="56sp"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintHorizontal_bias="0.496"
@@ -37,6 +37,7 @@
         android:id="@+id/banner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/banner_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:background="@color/ic_launcher_background"
+        android:contentDescription="@string/button_higher"
         app:layout_constraintEnd_toEndOf="@+id/textView3"
         app:layout_constraintStart_toStartOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/tvCurrentNumber"
@@ -60,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:background="@color/ic_launcher_background"
+        android:contentDescription="@string/button_lower"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/tvCurrentScore"
@@ -70,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:text="Current Score"
+        android:text="@string/current_score"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/banner" />
@@ -80,7 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="0"
+        android:text="@string/_0"
         android:textSize="56sp"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -91,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Round #"
+        android:text="@string/round"
         app:layout_constraintEnd_toEndOf="@+id/btnHigher"
         app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="@+id/btnHigher"
@@ -101,7 +104,7 @@
         android:id="@+id/tvRoundNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1"
+        android:text="@string/_1"
         app:layout_constraintBottom_toBottomOf="@+id/textView5"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="@+id/textView5" />
@@ -111,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="High Score:"
+        android:text="@string/high_score"
         app:layout_constraintEnd_toEndOf="@+id/btnLower"
         app:layout_constraintHorizontal_bias="0.065"
         app:layout_constraintStart_toStartOf="@+id/btnLower"
@@ -121,7 +124,7 @@
         android:id="@+id/tvHighScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="99999"
+        android:text="@string/_99999"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toTopOf="@+id/textView7" />
@@ -130,7 +133,7 @@
         android:id="@+id/tvRange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(0-100)"
+        android:text="@string/_0_100"
         app:layout_constraintEnd_toEndOf="@+id/tvCurrentNumber"
         app:layout_constraintStart_toStartOf="@+id/tvCurrentNumber"
         app:layout_constraintTop_toBottomOf="@+id/tvCurrentNumber" />
@@ -139,7 +142,7 @@
         android:id="@+id/tvIndicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correct!"
+        android:text="@string/Indicator"
         app:layout_constraintEnd_toEndOf="@+id/tvCurrentScore"
         app:layout_constraintStart_toStartOf="@+id/tvCurrentScore"
         app:layout_constraintTop_toBottomOf="@+id/tvCurrentScore" />
